--- a/DataPrep/Rzepa/preprocessing.ipynb
+++ b/DataPrep/Rzepa/preprocessing.ipynb
@@ -2,63 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from data_pipeline import data_pipeline, restore_authors, dot_problem_solver\n",
-    "from math import ceil"
+    "from math import ceil\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_rzepa = 'Rzeczpospolita 2015-2022.xlsx'\n",
-    "file_gpc = 'excels/Gazeta Polska Codziennie 2015-2022.xlsx'\n",
-    "file_newsweek = 'excels/Newsweek.xlsx'\n",
-    "file_wprost = \"excels/wprost-2015.xlsx\"\n",
-    "cols_rzepa = ['title', 'text', 'source', 'author','link','department','imgage','image_text']\n",
-    "cols_gpc = ['title', 'text', 'source', 'author','link','department','imgage']\n",
-    "cols_newsweek = ['title', 'text']"
+    "drive_korpusy = Path(\"/run/user/1000/gvfs/google-drive:host=gmail.com,user=przemek.7678/Shared drives/SKN AI FUW /Projekt z Dagmarą Mateją/Korpusy/Rzeczpospolita 2015-2022\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = pd.read_excel(file_rzepa)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Rzeczpospolita    216163\n",
-       "Name: source, dtype: int64"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "data['source'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,70 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:40: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data[col] = data[col].fillna('None')\n",
-      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:44: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data['text'] = data['text'].apply(lambda x: re.split('(?i)©℗\\s*Więcej\\s*na', x)[0])\n",
-      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:46: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data[col] = data[col].apply(lambda x: REPLACE_EXCESS_SPACES_RE.sub(' ', x))\n",
-      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:47: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data[col] = data[col].apply(lambda x: CLEAN_XLSX_1.sub('', x))\n",
-      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:48: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data[col] = data[col].apply(lambda x: x.replace(\"\\xad\", \"\"))\n",
-      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:49: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data[col] = data[col].apply(lambda x: x.replace(\"\\xa0\", \" \"))\n",
-      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:50: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data[col] = data[col].apply(lambda x: x.replace(\"_x0007_\", \" \"))\n",
-      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:53: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data['department'] = data['department'].str.strip()\n",
-      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:54: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data['author'] = data['author'].str.strip()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = data_pipeline(data, cols_rzepa)\n",
     "data = restore_authors(data) # Rzepa\n",
@@ -140,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4,
   "vscode": {
