--- a/Classification/files/ngram/ngrams.ipynb
+++ b/Classification/files/ngram/ngrams.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,15 +12,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "for dirpath, folders, files in os.walk(\"topics\"):\n",
+    "    file_list = [os.path.join(dirpath, f) for f in files]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "topics/car_grams.csv\n",
+      "topics/klimat_grams.csv\n",
+      "topics/trash_grams.csv\n",
+      "topics/water_grams.csv\n",
+      "topics/politic_grams.csv\n",
+      "topics/other_grams.csv\n",
+      "topics/weak_grams.csv\n",
+      "topics/energy_grams.csv\n"
+     ]
+    }
+   ],
+   "source": [
     "import pandas as pd\n",
     "import regex as re\n",
-    "files = [\"topics/car_grams.csv\", \"topics/klimat_grams.csv\", \"topics/trash_grams.csv\",\"topics/water_grams.csv\", \"topics/politic_grams.csv\", \"topics/other_grams.csv\"]\n",
     "data = []\n",
-    "for file in files:\n",
+    "for file in file_list:\n",
+    "    print(file)\n",
     "    df = pd.read_csv(file)\n",
     "    df['origin'] = re.search(\"/(.*)_\", file).group(1)\n",
     "    df.drop(columns='count', inplace=True)\n",
@@ -30,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
