--- a/Classification/Classification.ipynb
+++ b/Classification/Classification.ipynb
@@ -2,225 +2,54 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "from classify import data_pipeline\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Rzepa"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "df = pd.read_csv(\"eco_all.csv\", index_col='id')\n",
-        "df['klimat_count'] = df['klimat'] * df['ngram_sum']"
+        "df = data_pipeline(\"rzepa\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>text</th>\n",
-              "      <th>title</th>\n",
-              "      <th>words</th>\n",
-              "      <th>proba</th>\n",
-              "      <th>klimat_count</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>id</th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>5169</th>\n",
-              "      <td>Byli czterej jeźdźcy Apokalipsy: Wojna, Zaraza...</td>\n",
-              "      <td>Zegar Zagłady tyka</td>\n",
-              "      <td>['środowisko', 'energetyczny', 'ziemia', 'woda...</td>\n",
-              "      <td>0.517925</td>\n",
-              "      <td>10.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6006</th>\n",
-              "      <td>Bernhard Maier | Planujemy rozwój sieci dilers...</td>\n",
-              "      <td>Porsche ubezpieczyło się od spadku rubla</td>\n",
-              "      <td>['co2', 'emisja co2', 'dwutlenek węgiel', 'emi...</td>\n",
-              "      <td>0.721922</td>\n",
-              "      <td>18.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7069</th>\n",
-              "      <td>Na skutek ocieplenia klimatu i globalizacji do...</td>\n",
-              "      <td>Komary nadlatują z południa</td>\n",
-              "      <td>['woda', 'ocieplenie', 'zmiana klimat', 'wzros...</td>\n",
-              "      <td>0.733013</td>\n",
-              "      <td>11.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7740</th>\n",
-              "      <td>Spółka córka Agencji Rozwoju Przemysłu pożyczy...</td>\n",
-              "      <td>Inwestycyjne ramię ARP z pierwszym kontraktem</td>\n",
-              "      <td>['odpad', 'ekologiczny', 'dwutlenek węgiel', '...</td>\n",
-              "      <td>0.988016</td>\n",
-              "      <td>11.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>12620</th>\n",
-              "      <td>Mniej władzy dla Brukseli, większy dystans do ...</td>\n",
-              "      <td>Polska wychodzi z cienia Niemiec</td>\n",
-              "      <td>['energia', 'klimatyczny', 'polityka klimatycz...</td>\n",
-              "      <td>0.526428</td>\n",
-              "      <td>9.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>216247</th>\n",
-              "      <td>Ekstremalne wydarzenia pogodowe stają się cora...</td>\n",
-              "      <td>Ogromne straty przez gwałtowne zmiany klimatyczne</td>\n",
-              "      <td>['energia', 'co2', 'susz', 'klimatyczny', 'kat...</td>\n",
-              "      <td>0.975812</td>\n",
-              "      <td>19.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>216299</th>\n",
-              "      <td>W 2023 r. rząd chce rozdać sporą pulę ze 100 m...</td>\n",
-              "      <td>Czyste powietrze dla prężnych i bogatych</td>\n",
-              "      <td>['energia', 'energetyczny', 'powietrze', 'oze'...</td>\n",
-              "      <td>0.974738</td>\n",
-              "      <td>9.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>216363</th>\n",
-              "      <td>Otoczenie makroekonomiczne, geopolityczne, reg...</td>\n",
-              "      <td>Rok optymalizacji, ale i szans</td>\n",
-              "      <td>['zielony', 'energia', 'odpad', 'środowisko', ...</td>\n",
-              "      <td>0.991012</td>\n",
-              "      <td>15.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>216427</th>\n",
-              "      <td>Należy bardzo ostrożnie posługiwać się wskaźni...</td>\n",
-              "      <td>O nieadekwatności pewnej miary</td>\n",
-              "      <td>['woda', 'co2', 'klimatyczny', 'zużycie woda',...</td>\n",
-              "      <td>0.949464</td>\n",
-              "      <td>34.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>216431</th>\n",
-              "      <td>Nowy rok będzie stał pod znakiem rewizji w pla...</td>\n",
-              "      <td>Strategia zależna od rynku mocy, ten zależny o...</td>\n",
-              "      <td>['energia', 'środowisko', 'energetyczny', 'ele...</td>\n",
-              "      <td>0.995618</td>\n",
-              "      <td>10.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>2298 rows × 5 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                                                     text  \\\n",
-              "id                                                          \n",
-              "5169    Byli czterej jeźdźcy Apokalipsy: Wojna, Zaraza...   \n",
-              "6006    Bernhard Maier | Planujemy rozwój sieci dilers...   \n",
-              "7069    Na skutek ocieplenia klimatu i globalizacji do...   \n",
-              "7740    Spółka córka Agencji Rozwoju Przemysłu pożyczy...   \n",
-              "12620   Mniej władzy dla Brukseli, większy dystans do ...   \n",
-              "...                                                   ...   \n",
-              "216247  Ekstremalne wydarzenia pogodowe stają się cora...   \n",
-              "216299  W 2023 r. rząd chce rozdać sporą pulę ze 100 m...   \n",
-              "216363  Otoczenie makroekonomiczne, geopolityczne, reg...   \n",
-              "216427  Należy bardzo ostrożnie posługiwać się wskaźni...   \n",
-              "216431  Nowy rok będzie stał pod znakiem rewizji w pla...   \n",
-              "\n",
-              "                                                    title  \\\n",
-              "id                                                          \n",
-              "5169                                   Zegar Zagłady tyka   \n",
-              "6006             Porsche ubezpieczyło się od spadku rubla   \n",
-              "7069                          Komary nadlatują z południa   \n",
-              "7740        Inwestycyjne ramię ARP z pierwszym kontraktem   \n",
-              "12620                    Polska wychodzi z cienia Niemiec   \n",
-              "...                                                   ...   \n",
-              "216247  Ogromne straty przez gwałtowne zmiany klimatyczne   \n",
-              "216299           Czyste powietrze dla prężnych i bogatych   \n",
-              "216363                     Rok optymalizacji, ale i szans   \n",
-              "216427                     O nieadekwatności pewnej miary   \n",
-              "216431  Strategia zależna od rynku mocy, ten zależny o...   \n",
-              "\n",
-              "                                                    words     proba  \\\n",
-              "id                                                                    \n",
-              "5169    ['środowisko', 'energetyczny', 'ziemia', 'woda...  0.517925   \n",
-              "6006    ['co2', 'emisja co2', 'dwutlenek węgiel', 'emi...  0.721922   \n",
-              "7069    ['woda', 'ocieplenie', 'zmiana klimat', 'wzros...  0.733013   \n",
-              "7740    ['odpad', 'ekologiczny', 'dwutlenek węgiel', '...  0.988016   \n",
-              "12620   ['energia', 'klimatyczny', 'polityka klimatycz...  0.526428   \n",
-              "...                                                   ...       ...   \n",
-              "216247  ['energia', 'co2', 'susz', 'klimatyczny', 'kat...  0.975812   \n",
-              "216299  ['energia', 'energetyczny', 'powietrze', 'oze'...  0.974738   \n",
-              "216363  ['zielony', 'energia', 'odpad', 'środowisko', ...  0.991012   \n",
-              "216427  ['woda', 'co2', 'klimatyczny', 'zużycie woda',...  0.949464   \n",
-              "216431  ['energia', 'środowisko', 'energetyczny', 'ele...  0.995618   \n",
-              "\n",
-              "        klimat_count  \n",
-              "id                    \n",
-              "5169            10.0  \n",
-              "6006            18.0  \n",
-              "7069            11.0  \n",
-              "7740            11.0  \n",
-              "12620            9.0  \n",
-              "...              ...  \n",
-              "216247          19.0  \n",
-              "216299           9.0  \n",
-              "216363          15.0  \n",
-              "216427          34.0  \n",
-              "216431          10.0  \n",
-              "\n",
-              "[2298 rows x 5 columns]"
-            ]
-          },
-          "execution_count": 7,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "df[df['klimat_count'] > 8][['text', 'title', 'words', 'proba', 'klimat_count']]"
+        "columns = ['title', 'text','clean_title', 'clean_text', 'proba', 'words', 'num_words', 'politic', 'industry',\n",
+        "       'energy', 'klimat', 'water', 'other', 'car', 'weak_count',\n",
+        "       'ngram_sum_squared_to_total', 'ngram_sum_squared', 'ngram_sum',\n",
+        "       'label']\n",
+        "df = df[columns]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "topics = ['politic', 'industry',\t'energy', 'klimat', 'water', 'other', 'car']\n",
+        "for topic in topics:\n",
+        "    df[(df[topic] > 0.5) & (df['proba'] > 0.8)].to_csv(topic + \".csv\")"
       ]
     }
   ],
