--- a/Classification/files/ngram/ngrams.ipynb
+++ b/Classification/files/ngram/ngrams.ipynb
@@ -16,6 +16,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "topics = ['politic', 'industry',\t'energy', 'klimat', 'water', 'other', 'car']\n",
+    "for topic in topics:\n",
+    "    df = pd.read_csv(f\"../../{topic}.csv\", index_col='id')\n",
+    "    save_rest_ngrams(df, 100, topic)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Validate ngrams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "for dirpath, folders, files in os.walk(\"topics\"):\n",
     "    file_list = [os.path.join(dirpath, f) for f in files]"
@@ -36,26 +55,11 @@
     "    df['origin'] = re.search(\"/(.*)_\", file).group(1)\n",
     "    df.drop(columns='count', inplace=True)\n",
     "    data.append(df)\n",
-    "df = pd.concat(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vocab = get_eco_vocab()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df = pd.concat(data)\n",
+    "\n",
+    "vocab = get_eco_vocab()\n",
     "vocab_df = pd.DataFrame(vocab.items(), columns=['phrase', 'count'])\n",
-    "vocab_df[~vocab_df['phrase'].isin(df.phrase)]"
+    "print(len(vocab_df[~vocab_df['phrase'].isin(df.phrase)])), print(len(df[~df.phrase.isin(vocab_df.phrase)]))"
    ]
   },
   {
@@ -64,7 +68,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[~df.phrase.isin(vocab_df.phrase)]"
+    "categories = df.groupby(\"phrase\")['origin'].nunique()\n",
+    "assert len(categories[categories > 1]) == 0"
    ]
   },
   {
@@ -73,16 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[~df['phrase'].duplicated()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(\"ngrams_classified.csv\", index = False)"
+    "df.to_csv(\"ngrams.csv\", index = False)"
    ]
   }
  ],
