--- a/Classification/files/ngram/ngrams.ipynb
+++ b/Classification/files/ngram/ngrams.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-04 08:23:49.772484: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-11-04 08:23:49.818484: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-11-04 08:23:50.783759: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "from ngrams import save_rest_ngrams, lemmatizer, get_eco_vocab\n",
     "import pandas as pd"
@@ -31,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,9 +52,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "topics/car_grams.csv\n",
+      "topics/other_grams.csv\n",
+      "topics/water_grams.csv\n",
+      "topics/klimat_grams.csv\n",
+      "topics/energy_grams.csv\n",
+      "topics/industry_grams.csv\n",
+      "topics/politic_grams.csv\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import regex as re\n",
@@ -55,16 +79,12 @@
     "    df['origin'] = re.search(\"/(.*)_\", file).group(1)\n",
     "    df.drop(columns='count', inplace=True)\n",
     "    data.append(df)\n",
-    "df = pd.concat(data)\n",
-    "\n",
-    "vocab = get_eco_vocab()\n",
-    "vocab_df = pd.DataFrame(vocab.items(), columns=['phrase', 'count'])\n",
-    "print(len(vocab_df[~vocab_df['phrase'].isin(df.phrase)])), print(len(df[~df.phrase.isin(vocab_df.phrase)]))"
+    "df = pd.concat(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,10 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = df[df['phrase'].duplicated()]\n",
     "df.to_csv(\"ngrams.csv\", index = False)"
    ]
   }
