--- a/Classification/files/ngram/ngrams.ipynb
+++ b/Classification/files/ngram/ngrams.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-11-04 08:23:49.772484: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-11-04 08:23:49.818484: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-11-04 08:23:50.783759: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ngrams import save_rest_ngrams, lemmatizer, get_eco_vocab\n",
     "import pandas as pd"
@@ -41,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,23 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "topics/car_grams.csv\n",
-      "topics/other_grams.csv\n",
-      "topics/water_grams.csv\n",
-      "topics/klimat_grams.csv\n",
-      "topics/energy_grams.csv\n",
-      "topics/industry_grams.csv\n",
-      "topics/politic_grams.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import regex as re\n",
@@ -84,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[df['phrase'].duplicated()]\n",
+    "df = df[~df['phrase'].duplicated()]\n",
     "df.to_csv(\"ngrams.csv\", index = False)"
    ]
   }
