--- a/Classification/Classification.ipynb
+++ b/Classification/Classification.ipynb
@@ -2,12 +2,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "import pandas as pd\n",
-        "from classify import data_pipeline"
+        "from classify import data_pipeline\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "from functools import reduce"
       ]
     },
     {
@@ -19,91 +21,114 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "rzepa\n",
-            "Configuration finished\n",
-            "Dataset of 18032 samples\n",
-            "0    10543\n",
-            "1     7489\n",
-            "Name: label, dtype: int64\n",
-            "Preprocessing ended\n",
-            "Accuracy of model 0.9966740576496674\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 39/39 [00:56<00:00,  1.46s/it]\n"
-          ]
-        }
-      ],
-      "source": [
-        "df = data_pipeline(\"rzepa\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
+        "df = data_pipeline(\"rzepa\")\n",
         "df.drop(columns=['vectorized'], inplace=True)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "df['Rank'] = None\n",
-        "df.loc[(df['ngram_sum_squared_to_total'] > 0.5) & (df['proba'] > 0.7) & (df['weak_count'] < 0.9) & (df['words'].apply(len) > 2), 'Rank'] = 'Eco'"
+        "df['Rank'] = None"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Filter I"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "array(['title', 'magazine_nr', 'text', 'link', 'author', 'department',\n",
-              "       'imgage', 'image_text', 'date', 'clean_text', 'clean_title',\n",
-              "       'proba', 'words', 'num_words', 'politic', 'industry', 'energy',\n",
-              "       'klimat', 'water', 'other', 'car', 'weak_count',\n",
-              "       'ngram_sum_squared_to_total', 'ngram_sum_squared', 'ngram_sum',\n",
-              "       'label', 'Rank'], dtype=object)"
-            ]
-          },
-          "execution_count": 15,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "df.columns.values"
+        "def filter_by_conditions(df, condition_list):\n",
+        "    selection_mask = reduce(lambda x, y: x & y, condition_list)\n",
+        "    df.loc[selection_mask, 'Rank'] = 'Test'\n",
+        "    return df[selection_mask]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "df.loc[(df['Rank'] =='Eco') & (df['klimat'] > 0.5), 'Rank'] = 'klimat'\n",
-        "df.loc[(df['Rank'] =='Eco') & (df['car'] > 0.5), 'Rank'] = 'car'\n",
-        "df.loc[(df['Rank'] =='Eco') & (df['energy'] > 0.5), 'Rank'] = 'energy'\n",
-        "df.loc[(df['Rank'] =='Eco') & (df['industry'] > 0.5), 'Rank'] = 'industry'\n",
-        "df.loc[(df['Rank'] =='Eco') & (df['politic'] > 0.5), 'Rank'] = 'politic'"
+        "condition_list = []\n",
+        "condition_list.append(df['ngram_sum_squared_to_total'] > 1)\n",
+        "condition_list.append(df['proba'] > 0.9)\n",
+        "condition_list.append(df['weak_count'] < 0.9)\n",
+        "condition_list.append(df['words'].apply(len) > 2)\n",
+        "condition_list.append(df['Rank'].isna())\n",
+        "\n",
+        "df_selected = filter_by_conditions(df, condition_list)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_sample = df_selected.sample(100)\n",
+        "df_sample.to_csv(\"data.csv\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Approved\n",
+        "df.loc[df['Rank'] == 'Test', 'Rank'] = 'Filter1'"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Filter II"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_left = df[df['Rank'].isna()]\n",
+        "condition_list = [df_left['weak_count']  < 0.3,\n",
+        "                  df_left['ngram_sum_squared_to_total'] > 1]\n",
+        "df_selected = filter_by_conditions(df_left, condition_list)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "sns.jointplot(df_selected, x = 'weak_count', y = 'ngram_sum_squared')\n",
+        "plt.yscale('log')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_selected.sample(100).to_csv('data.csv')"
       ]
     }
   ],
@@ -125,7 +150,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.4"
+      "version": "3.11.6"
     }
   },
   "nbformat": 4,
